SERVER-36443 Clear ChunkManager objects in metadata when no longer in use

(cherry picked from commit da8c0d18e7ba69ef2ce31236d34816f6fbe8cec3)