src/mongo/db/s/metadata_manager.cpp
@@ -192,8 +192,11 @@ public:
         }
     }
 
-    const CollectionMetadata& get() override {
-        return _metadataTracker->metadata;
+    // This will only ever refer to the active metadata, so CollectionMetadata should never be
+    // boost::none
+    const CollectionMetadata& get() {
+        invariant(_metadataTracker->metadata);
+        return _metadataTracker->metadata.get();
     }
 
 private:
@@ -246,7 +249,8 @@ ScopedCollectionMetadata MetadataManager::getActiveMetadata(
         return {std::make_shared<RangePreserver>(lg, std::move(self), std::move(metadataTracker))};
     }
 
-    auto chunkManager = metadataTracker->metadata.getChunkManager();
+    auto chunkManager = metadataTracker->metadata->getChunkManager();
+
     auto chunkManagerAtClusterTime = std::make_shared<ChunkManager>(
         chunkManager->getRoutingHistory(), atClusterTime->asTimestamp());
 
@@ -263,7 +267,7 @@ ScopedCollectionMetadata MetadataManager::getActiveMetadata(
     };
 
     return {std::make_shared<MetadataAtTimestamp>(
-        CollectionMetadata(chunkManagerAtClusterTime, metadataTracker->metadata.shardId()))};
+        CollectionMetadata(chunkManagerAtClusterTime, metadataTracker->metadata->shardId()))};
 }
 
 size_t MetadataManager::numberOfMetadataSnapshots() const {
@@ -272,6 +276,18 @@ size_t MetadataManager::numberOfMetadataSnapshots() const {
         return 0;
 
     return _metadata.size() - 1;
+}
+
+int MetadataManager::numberOfEmptyMetadataSnapshots() const {
+    stdx::lock_guard<stdx::mutex> lg(_managerLock);
+
+    int emptyMetadataSnapshots = 0;
+    for (const auto& collMetadataTracker : _metadata) {
+        if (!collMetadataTracker->metadata)
+            emptyMetadataSnapshots++;
+    }
+
+    return emptyMetadataSnapshots;
 }
 
 void MetadataManager::refreshActiveMetadata(std::unique_ptr<CollectionMetadata> remoteMetadata) {
@@ -289,7 +305,7 @@ void MetadataManager::refreshActiveMetadata(std::unique_ptr<CollectionMetadata> 
     // Collection is becoming unsharded
     if (!remoteMetadata) {
         log() << "Marking collection " << _nss.ns() << " with "
-              << redact(_metadata.back()->metadata.toStringBasic()) << " as unsharded";
+              << redact(_metadata.back()->metadata->toStringBasic()) << " as unsharded";
 
         _receivingChunks.clear();
         _clearAllCleanups(lg);
@@ -308,7 +324,7 @@ void MetadataManager::refreshActiveMetadata(std::unique_ptr<CollectionMetadata> 
         return;
     }
 
-    auto* const activeMetadata = &_metadata.back()->metadata;
+    auto* const activeMetadata = &_metadata.back()->metadata.get();
 
     // If the metadata being installed has a different epoch from ours, this means the collection
     // was dropped and recreated, so we must entirely reset the metadata state
@@ -360,16 +376,32 @@ void MetadataManager::_setActiveMetadata(WithLock wl, CollectionMetadata newMeta
 }
 
 void MetadataManager::_retireExpiredMetadata(WithLock lock) {
+    // Remove entries and schedule orphans for deletion only from the front of _metadata. We cannot
+    // remove an entry from the middle of _metadata because a previous entry (whose usageCount is
+    // not 0) could have a query that is actually still accessing those documents.
     while (_metadata.size() > 1 && !_metadata.front()->usageCounter) {
         if (!_metadata.front()->orphans.empty()) {
             log() << "Queries possibly dependent on " << _nss.ns()
                   << " range(s) finished; scheduling ranges for deletion";
-            // It is safe to push orphan ranges from _metadata.back(), even though new queries might
-            // start any time, because any request to delete a range it maps is rejected.
+
             _pushListToClean(lock, std::move(_metadata.front()->orphans));
         }
 
         _metadata.pop_front();
+    }
+
+    // To avoid memory build up of ChunkManager objects, we can clear the CollectionMetadata object
+    // in an entry when its usageCount is 0 as long as it is not the last item in _metadata (which
+    // is the active metadata). If _metadata is empty, decrementing iter will be out of bounds, so
+    // we must check that the size is > 1 as well.
+    if (_metadata.size() > 1) {
+        auto iter = _metadata.begin();
+        while (iter != (--_metadata.end())) {
+            if ((*iter)->usageCounter == 0) {
+                (*iter)->metadata = boost::none;
+            }
+            ++iter;
+        }
     }
 }
 
@@ -403,7 +435,7 @@ void MetadataManager::append(BSONObjBuilder* builder) const {
     }
 
     BSONArrayBuilder amrArr(builder->subarrayStart("activeMetadataRanges"));
-    for (const auto& entry : _metadata.back()->metadata.getChunks()) {
+    for (const auto& entry : _metadata.back()->metadata->getChunks()) {
         BSONObjBuilder obj;
         ChunkRange r = ChunkRange(entry.first, entry.second);
         r.append(&obj);
@@ -425,7 +457,7 @@ void MetadataManager::_pushListToClean(WithLock, std::list<Deletion> ranges) {
     auto when = _rangesToClean.add(std::move(ranges));
     if (when) {
         scheduleCleanup(
-            _executor, _nss, _metadata.back()->metadata.getCollVersion().epoch(), *when);
+            _executor, _nss, _metadata.back()->metadata->getCollVersion().epoch(), *when);
     }
     invariant(ranges.empty());
 }
@@ -532,14 +564,15 @@ auto MetadataManager::_findNewestOverlappingMetadata(WithLock, ChunkRange const&
     invariant(!_metadata.empty());
 
     auto it = _metadata.rbegin();
-    if ((*it)->metadata.rangeOverlapsChunk(range)) {
+    if ((*it)->metadata && (*it)->metadata->rangeOverlapsChunk(range)) {
         return (*it).get();
     }
 
     ++it;
     for (; it != _metadata.rend(); ++it) {
         auto& tracker = *it;
-        if (tracker->usageCounter && tracker->metadata.rangeOverlapsChunk(range)) {
+        if (tracker->usageCounter && tracker->metadata &&
+            tracker->metadata->rangeOverlapsChunk(range)) {
             return tracker.get();
         }
     }
@@ -572,7 +605,7 @@ auto MetadataManager::_overlapsInUseCleanups(WithLock, ChunkRange const& range) 
 boost::optional<ChunkRange> MetadataManager::getNextOrphanRange(BSONObj const& from) const {
     stdx::lock_guard<stdx::mutex> lg(_managerLock);
     invariant(!_metadata.empty());
-    return _metadata.back()->metadata.getNextOrphanRange(_receivingChunks, from);
+    return _metadata.back()->metadata->getNextOrphanRange(_receivingChunks, from);
 }
 
 }  // namespace mongo
